[package]
name = "iced_password"
author = "KrtizZ"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
directories-next = "2.0.0"
iced = { version = "0.8.0", features = ["async-std", "debug", "image_rs"] }
im = "15.1.0"
lazy_static = "1.4.0"
once_cell = "1.17.1"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"

[build-dependencies]
winres = "0.1"


[[bin]]
edition = "2021"
name = "PasswordGenerator"
path = "src/main.rs"

